Prevent collapsible overflow

--- a/app/design/frontend/Travers/default/SomethingDigital_ReactPLP/styles/components/_catland.scss
+++ b/app/design/frontend/Travers/default/SomethingDigital_ReactPLP/styles/components/_catland.scss
@@ -108,7 +108,7 @@
 
     .Collapsible__trigger {
       box-sizing: border-box;
-      padding: $indent__m 100% $indent__s 0;
+      padding: $indent__m 90% $indent__s 0;
       z-index: 3;
       opacity: 0;
     }
